k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-aid-kit
  labels:
    app: first-aid-kit
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: first-aid-kit
